[package]
name = "kvs"
version = "0.1.0"
authors = ["Dizans <dizansyu@gmail.com>"]
edition = "2018"
description = """
A simple key-value based in memory database
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "kvs-client"
# path = "src/bin/kvs-client.rs"

# [[bin]]
# name = "kvs-server"
# path = "src/bin/kvs-server.rs"

[dependencies]
clap = "2.33.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.31.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
